name:                yahoo-finance-conduit
version:             0.1.0.1
synopsis:            Streaming aproach to the yahoo finance api
description:         Small library streaming stock market data from the yahoo finance api
license:             MIT
license-file:        LICENSE
author:              Alexander Thiemann <mail@athiemann.net>
maintainer:          mail@agrafix.net
copyright:           (c) 2014 - 2015 Alexander Thiemann <mail@athiemann.net>
category:            Data
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC==7.8.4, GHC==7.10.2

extra-source-files:
    README.md

library
  exposed-modules:     Data.Conduit.Finance.Yahoo
  build-depends:       base >=4.7,
                       conduit >=1.1,
                       wreq >=0.2,
                       text >=1.1,
                       mtl >=2.2,
                       lens >=4.4,
                       cassava >=0.4,
                       vector >=0.10,
                       attoparsec >=0.12,
                       unordered-containers >=0.2,
                       hashable >=1.2
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options: -Wall -fno-warn-orphans

source-repository head
  type:     git
  location: https://github.com/agrafix/yahoo-finance-conduit
